# texttools

./: .gitignore  LICENSE  README.md
eolconv/: main.cpp
src/: CMakeLists.txt  common.cpp  common.h  eolconv.cpp  main.cpp  utf8bom.cpp
